# sbi-discord-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
cogs/: ai.py  recording.py  recording_alternative.py
steve/: main.py
steve/ai/: transcription.py
steve/cogs/: admin.py  ai.py  ai_.py  meetings.py  recording.py  utility.py
steve/db/: __init__.py  database.py  meetings.py  people.py
steve/db/models/: meeting.py
steve/db/types/: __init__.py  meeting.py  person.py
steve/utils/: __init__.py  config.py  logging_config.py
